log
Thu 09 May 2024 06:36:14 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
Thu 09 May 2024 06:50:50 PM UTC: 
 treemap.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
09ca15a
Thu 09 May 2024 06:59:02 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|6
total_score: 15/70
c88e9a8
Thu 09 May 2024 06:59:57 PM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  12|6
total_score: 15/70
dc9f327
Thu 09 May 2024 07:01:20 PM UTC: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  13|5
total_score: 25/70
aa3fff5
Thu 09 May 2024 07:03:21 PM UTC: 
 treemap.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
 tests:  13|5
total_score: 25/70
3d6162a
Thu 09 May 2024 07:05:11 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
deb34eb
Thu 09 May 2024 07:06:44 PM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:113:9: error: implicit declaration of function ‘transplant’ [-Werror=implicit-function-declaration]
  113 |         transplant(tree, node, node->right);
      |         ^~~~~~~~~~
treemap.c:122:13: error: ‘TreeNode’ has no member named ‘key’
  122 |         node->key = successor->key;
      |             ^~
treemap.c:122:30: error: ‘TreeNode’ has no member named ‘key’
  122 |         node->key = successor->key;
      |                              ^~
treemap.c:123:13: error: ‘TreeNode’ has no member named ‘value’
  123 |         node->value = successor->value;
      |             ^~
treemap.c:123:32: error: ‘TreeNode’ has no member named ‘value’
  123 |         node->value = successor->value;
      |                                ^~
cc1: all warnings being treated as errors
Compilation failed
21dae24
